apps/tailscale/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-tailscale
  namespace: minio
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: minio
