apps/tailscale/minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-tailscale
  namespace: minio
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: minio-console
      port:
        number: 9001
  tls:
    - hosts:
        - minio-minio-tailscale
